    symlinks.
  * Refresh patches. Drop the ones which have been merged upstream.
  * When linking against libgail18, automatically generate a dependency on
    libgail-common. This was originally achieved via a .shlibs file but since
    we use a .symbols file nowadays, move this over there.
  * Remove an old shlibs.local hack which doesn't seem necessary anymore.

 -- Michael Biebl <biebl@debian.org>  Sat, 10 Sep 2016 02:25:29 +0200

gtk+2.0 (2.24.30-4) unstable; urgency=medium

  [ Laurent Bigonville ]
  * debian/control.in: Bump hicolor-icon-theme to a hard dependency, the
    package is small and only provides the directory structure of the theme.
  * Depends against gnome-icon-theme | adwaita-icon-theme so we are sure the
    needed icons are installed by default. When using the GNOME, the desktop
    sets the icon theme to Adwaita by default, so the gnome-icon-theme package
    can be removed.

  [ Emilio Pozuelo Monfort ]
  * Add build-indep and build-arch targets.
  * Don't build the udeb or static flavors when only building arch-indep
    packages. Don't run the test suite either.
  * Don't build the different flavors in parallel, to workaround a bug in the
    documentation build. Closes: #798972.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 17 Jul 2016 18:34:17 +0200

gtk+2.0 (2.24.30-3) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Use https for copyright headers
  * Use https in d/watch and use new "special strings" to help standardize
    format

  [ Emilio Pozuelo Monfort ]
  * Let libgtk2.0-0 recommend libgail-common, so that installing a
    GTK+2.0 application also installs the accessibility libs.
    See #822612.
  * Add a libgail18-udeb package. Thanks to Samuel Thibault. Closes: #816720.
  * Set libgail18-udeb to section debian-installer.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 13 Jul 2016 17:43:50 +0200

gtk+2.0 (2.24.30-2) unstable; urgency=medium

  * Acknowledge NMU, thanks Salvatore Bonaccorso.